kubes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remailable
  namespace: q-personal
  labels:
    app: remailable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remailable
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: '["default-ipv6-ippool"]'
      labels:
        app: remailable
    spec:
      containers:
        - name: remailable
          image: theenbyperor/remailable:1
          imagePullPolicy: Always
