kubes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: remailable
  namespace: q-personal
spec:
  selector:
    app: remailable
  ports:
    - name: http
      port: 80
      targetPort: 80
